# Fall-Of-Solana-SR

./: .env.example  .env.local  .gitignore  BETA_TESTING_GUIDE.md  BUGS_FOUND.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOY_CHECKLIST_30MIN.md  DEPLOY_STATUS.txt  DEPLOY_TO_DEVNET.md  DEPLOY_TO_VERCEL_QUICK.md  DEPLOY_VERCEL.md  DEV_FEE_REVIEW.md  DOCS_INDEX.md  EXPRESS_LAUNCH.md  FINAL_2_FIXES.md  FIXES_APPLIED.md  Fossr Env Variables.rtf  LAUNCH_CHECKLIST.md  LAWYER_REVIEW_CHECKLIST.md  LAWYER_REVIEW_ROUND2.md  LEVEL_SYSTEM.md  NEW_FILES_CREATED.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_COMMANDS.md  README.md  README_DEPLOY.md  ROUND3_FIXES.md  SECURITY_CHECKLIST.md  START_HERE_DEPLOY.md  deploy-devnet.sh  deploy-vercel.sh  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-log.sh
anchor-program/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
anchor-program/programs/fossr/: Cargo.toml
anchor-program/programs/fossr/src/: lib.rs
anchor-program/scripts/: airdrop-runner.ts  check-state.ts  create-dev-vault.js  do-init.js  init-simple.js  init-vault.ts  initialize.ts  set-airdrop-pot.ts  update-token-mint.ts
anchor-program/tests/: fossr.ts
app/: globals.css  layout.tsx  providers.tsx
app/dashboard/: page.tsx
components/: AirdropWinModal.tsx  BuySellShareSection.tsx  CountdownTimer.tsx  LevelBadge.tsx  LevelBenefitsPreview.tsx  LoadingSpinner.tsx  PurchaseOrdersTable.tsx  StatsCard.tsx  WalletProvider.tsx
hooks/: useUserLevel.ts
lib/: levels.ts  solana.ts  utils.ts
types/: index.ts
