[package]
name = "fossr"
version = "0.1.0"
description = "Fall of Solana Strategic Reserve - Anti-rugpull token with tiered locks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fossr"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
blake3 = "=1.5.0"
